# detect_planner

./: CHANGELOG.rst  CMakeLists.txt  README.md  bgp_plugin.xml  package.xml
include/detect_planner/: detect_planner.h
launch/: detect_planner.launch
src/: detect_planner.cpp  detect_planner.cpp.autosave  detect_planner_node.cpp  detect_planner_node.cpp.autosave
test/: pub.sh
